fix img order in block about

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,8 @@
 <div>
   <div class="block1-wrapper">
     <div class="block1-box">
+      <div class="block1-girl-background"></div>
+
       <div class="container">
         <div>
           <header class="header">
@@ -58,23 +60,25 @@
               </div>
             </div>
           </header>
-          <div class="block1-description-wrapper">
-            <div class="block1-description">
-              <h1 class="block1-title title-general">
-                В нашей стоматологии только <span class="other-text">передовое оборудование</span> и специалисты высокой квалификации
-              </h1>
-              <p class="text-middle block1-text">
-                Предоставляем гарантию на услуги
-              </p>
-              <div class="button-wrapper">
-                <button class="button-general-styles block1-button">
-                  Записаться на приём
-                </button>
+          <div class="block1-content">
+            <div class="block1-description-wrapper">
+              <div class="block1-description">
+                <h1 class="block1-title title-general">
+                  В нашей стоматологии только <span class="other-text">передовое оборудование</span> и специалисты высокой квалификации
+                </h1>
+                <p class="text-middle block1-text">
+                  Предоставляем гарантию на услуги
+                </p>
+                <div class="button-wrapper">
+                  <button class="button-general-styles block1-button">
+                    Записаться на приём
+                  </button>
+                </div>
               </div>
             </div>
+<!--            <div class="block1-girl-background"></div>-->
           </div>
         </div>
-
       </div>
     </div>
   </div>
@@ -301,7 +305,8 @@
                   </div>
                 </div>
                 <div class="block-stock-card-img-wrapper">
-                  <img src="img/block-action-2.png" alt="" class="block-stock-card-img2"></div>
+                  <img src="img/block-action-2.png" alt="" class="block-stock-card-img2">
+                </div>
                 <span class="block-stock-card-text-date">до 31.09.21</span>
               </div>
             </div>
@@ -352,10 +357,10 @@
           </div>
 
           <div class="js-slider-nav block-about-img-bottom-row">
-            <img src="img/about1.jpg" alt="" class="block-about-small-item">
             <img src="img/about2.jpg" alt="" class="block-about-small-item">
             <img src="img/about3.jpg" alt="" class="block-about-small-item">
             <img src="img/about4.jpg" alt="" class="block-about-small-item">
+            <img src="img/about1.jpg" alt="" class="block-about-small-item">
           </div>
 
 
