full adaptive for tablet. clean some code

--- a/app/index.html
+++ b/app/index.html
@@ -6,22 +6,18 @@
   <meta name="description" content="">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
-<!--  <link rel="preconnect" href="https://fonts.googleapis.com">-->
-<!--  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
-<!--  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,800;1,600&display=swap" rel="stylesheet">-->
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-<!--  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>-->
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
 </head>
 <body>
+
 <div>
+
   <div class="block1-wrapper">
     <div class="block1-box">
-      <div class="block1-girl-background"></div>
+<!--      <div class="block1-girl-background"></div>-->
 
       <div class="container">
         <div>
@@ -64,7 +60,7 @@
             <div class="block1-description-wrapper">
               <div class="block1-description">
                 <h1 class="block1-title title-general">
-                  В нашей стоматологии только <span class="other-text">передовое оборудование</span> и специалисты высокой квалификации
+                  В нашей стоматологии<br> только <span class="other-text">передовое оборудование<br></span> и специалисты высокой квалификации
                 </h1>
                 <p class="text-middle block1-text">
                   Предоставляем гарантию на услуги
@@ -101,7 +97,7 @@
                 <div class="block-price-card-img-wrapper">
                   <img src="./img/img-for-price-1.png" alt="" class="block-price-card-img">
                 </div>
-                <p class="text-middle">
+                <p class="text-middle block-price-text-card">
                   Лечение зубов
                 </p>
               </div>
@@ -111,7 +107,7 @@
                 <div class="block-price-card-img-wrapper">
                   <img src="./img/img-for-price-2.png" alt="" class="block-price-card-img">
                 </div>
-                <p class="text-middle">
+                <p class="text-middle block-price-text-card">
                   Удаление зубов
                 </p>
               </div>
@@ -121,7 +117,7 @@
                 <div class="block-price-card-img-wrapper">
                   <img src="./img/img-for-price-3.png" alt="" class="block-price-card-img">
                 </div>
-                <p class="text-middle">
+                <p class="text-middle block-price-text-card">
                   Установка коронок
                 </p>
               </div>
@@ -131,7 +127,7 @@
                 <div class="block-price-card-img-wrapper">
                   <img src="./img/img-for-price-4.png" alt="" class="block-price-card-img">
                 </div>
-                <p class="text-middle">
+                <p class="text-middle block-price-text-card">
                   Протезирование
                 </p>
               </div>
@@ -141,7 +137,7 @@
                 <div class="block-price-card-img-wrapper">
                   <img src="./img/img-for-price-5.png" alt="" class="block-price-card-img">
                 </div>
-                <p class="text-middle">
+                <p class="text-middle block-price-text-card">
                   Имплантация
                 </p>
               </div>
@@ -151,7 +147,7 @@
                 <div class="block-price-card-img-wrapper">
                   <img src="./img/img-for-price-6.png" alt="" class="block-price-card-img">
                 </div>
-                <p class="text-middle">
+                <p class="text-middle block-price-text-card">
                   Брекеты/Элайнеры
                 </p>
               </div>
@@ -161,7 +157,7 @@
                 <div class="block-price-card-img-wrapper">
                   <img src="./img/img-for-price-7.png" alt="" class="block-price-card-img">
                 </div>
-                <p class="text-middle">
+                <p class="text-middle block-price-text-card">
                   Детская стоматология
                 </p>
               </div>
@@ -171,7 +167,7 @@
                 <div class="block-price-card-img-wrapper">
                   <img src="./img/img-for-price-8.png" alt="" class="block-price-card-img">
                 </div>
-                <p class="text-middle">
+                <p class="text-middle block-price-text-card">
                   Гигиена
                 </p>
               </div>
@@ -209,7 +205,24 @@
             </div>
             <p class="modal-text-accept">Нажимая на кнопку, Вы соглашаетесь на обработку персональных данных</p>
           </div>
+          <div class="modal-column-right-row modal-column-right-row-for-tablet-hidden">
+            <div class="modal-card-general-wrapper-tablet modal-card">
+              <div class="modal-card-general">
+                <span class="modal-card-general-text">Первые по имплантации All-on-4 в России</span>
+              </div>
+            </div>
+            <div class="modal-card-general-wrapper-tablet modal-card">
+              <div class="modal-card-general">
+                <span class="modal-card-general-text">Лучшая стоматология России 2021</span>
+              </div>
+            </div>
+            <div class="modal-card-general-wrapper-tablet modal-card">
+              <div class="modal-card-general">
+                <span class="modal-card-general-text">Чемпионы России по протезированию</span>
+              </div>
+            </div>
 
+          </div>
 
         </div>
         <div class="modal-column-right">
@@ -239,7 +252,7 @@
               <p class="modal-text-client">Фамилия Имя<br> Отчество</p>
             </div>
           </div>
-          <div class="modal-column-right-row">
+          <div class="modal-column-right-row modal-column-right-row-for-desktop-hidden">
             <div class="modal-card-general-wrapper modal-card">
               <div class="modal-card-general">
                 <span class="modal-card-general-text">Первые по имплантации All-on-4 в России</span>
@@ -258,10 +271,8 @@
 
           </div>
         </div>
-
       </div>
-<!--      <span class="close">&times;</span>-->
-      <span class="close"></span>
+      <span class="close"><img src="img/close.png" alt=""></span>
       <div></div>
     </div>
 
@@ -272,7 +283,7 @@
       <div class="block-stock-content-wrapper">
         <h3 class="title-general title-general-align">Акции</h3>
         <div class="block-stock-cards-wrapper">
-          <div class="block-stock-cards">
+          <div class="block-stock-cards js-first-card-slider-wrapper">
             <div class="block-stock-card-wrapper">
               <div class="block-stock-card">
                 <div class="block-stock-card-content">
@@ -295,7 +306,7 @@
               <div class="block-stock-card">
                 <div class="block-stock-card-content">
                   <p class="text-large block-stock-card-title">
-                    Имплантация зубов<br>под ключ
+                    Имплантация зубов<br> под ключ
                   </p>
                   <p class="text-small block-stock-card-text">28 000 ₽ <span class="block-stock-card-text-price">36 000 ₽</span></p>
                   <div class="button-wrapper">
@@ -305,8 +316,7 @@
                   </div>
                 </div>
                 <div class="block-stock-card-img-wrapper">
-                  <img src="img/block-action-2.png" alt="" class="block-stock-card-img2">
-                </div>
+                  <img src="img/block-action-2.png" alt="" class="block-stock-card-img2"></div>
                 <span class="block-stock-card-text-date">до 31.09.21</span>
               </div>
             </div>
@@ -314,7 +324,7 @@
               <div class="block-stock-card">
                 <div class="block-stock-card-content">
                   <p class="text-large block-stock-card-title">
-                    Бесплатная консультация стоматолога-ортодонта
+                    Профессиональная гигиена полости рта
                   </p>
                   <p class="text-small block-stock-card-text">3 800 ₽ <span class="block-stock-card-text-price">5 600 ₽</span></p>
                   <div class="button-wrapper">
@@ -362,7 +372,6 @@
             <img src="img/about4.jpg" alt="" class="block-about-small-item">
             <img src="img/about1.jpg" alt="" class="block-about-small-item">
           </div>
-
 
         </div>
       </div>
@@ -562,7 +571,6 @@
               <p class="text-small block-map-text">Москва, ул. Спартаковская, д. 24, ст. 2, м. «Бауманская» (1 мин.)ТЦ Елоховский пассаж, 2 этаж</p>
               <img src="img/map-metka.png" alt="" class="block-map-img-metka1">
             </div>
-
           </div>
           <div class="block-map-card-wrapper">
             <div class="block-map-card">
@@ -570,7 +578,6 @@
               <p class="text-small block-map-text">Москва,  ул. Покрышкина, 1, стр. 1, м. «Юго-Западная» (2 мин.)</p>
               <img src="img/map-metka.png" alt="" class="block-map-img-metka2">
             </div>
-
           </div>
           <div class="block-map-card-wrapper">
             <div class="block-map-card">
@@ -604,64 +611,61 @@
       </div>
     </div>
   </div>
-
   <footer class="footer-wrapper">
     <div class="container">
       <div class="footer-box">
-        <div class="footer-header">
-          <div class="header-row">
-            <div class="logo-wrapper">
-              <a href="#">
-                <img src="img/main_logo.svg" alt="logo" class="logo-img">
-              </a>
-            </div>
-            <ul class="menu js-tab-menu">
-              <li class="menu-item">
-                <a href="#about" class="menu-item-text text-small active js-menu-item">О клинике</a>
-              </li>
-              <li class="menu-item">
-                <a href="#price" class="menu-item-text text-small js-menu-item">Стоимость</a>
-              </li>
-              <li class="menu-item">
-                <a href="#stock" class="menu-item-text text-small js-menu-item">Акции</a>
-              </li>
-              <li class="menu-item">
-                <a href="#reviews" class="menu-item-text text-small js-menu-item">Отзывы</a>
-              </li>
-              <li class="menu-item">
-                <a href="#answer" class="menu-item-text text-small js-menu-item">Задать вопрос</a>
-              </li>
-              <li class="menu-item">
-                <a href="#contacts" class="menu-item-text text-small">Контакты</a>
-              </li>
-            </ul>
-            <div class="phone-wrapper">
-              <div class="phone-img-wrapper">
-                <img src="img/phone-call.png" alt="phone" class="phone-img">
-              </div>
-              <p class="phone-text">8 800 222 19 79</p>
-            </div>
+        <div class="footer-first-column">
+          <div class="logo-wrapper" >
+            <a href="#">
+              <img src="img/main_logo.svg" alt="logo" class="logo-img">
+            </a>
           </div>
-
+          <p class="footer-text">info@anatomia-clinic.ru </p>
+            <p class="footer-text">ООО "ЦМР района Басманный" Юридический адрес: 105066, г.Москва, ул.Спартаковская, д.24</p>
+          <p class="footer-text">Анатомия® - зарегистрированный товарный знак</p>
         </div>
-        <div class="footer-row">
-          <div class="footer-column">
-            <p class="footer-text">info@anatomia-clinic.ru ООО "ЦМР района Басманный" Юридический адрес: 105066, г.Москва, ул.Спартаковская, д.24 Анатомия® - зарегистрированный товарный знак</p>
-          </div>
-          <div class="footer-column">
-            <div class="footer-icons-wrapper">
-              <a href="#"><img src="img/inst.svg" alt="" class="footer-icon"></a>
-              <a href="#"><img src="img/vk.svg" alt="" class="footer-icon"></a>
-              <a href="#"><img src="img/youtube.svg" alt="" class="footer-icon"></a>
-              <a href="#"><img src="img/facebook.svg" alt="" class="footer-icon"></a>
-              <a href="#"><img src="img/telegr.svg" alt="" class="footer-icon"></a>
+        <div class="footer-middle-column">
+          <ul class="menu js-tab-menu">
+            <li class="menu-item">
+              <a href="#about" class="menu-item-text text-small active js-menu-item">О клинике</a>
+            </li>
+            <li class="menu-item">
+              <a href="#price" class="menu-item-text text-small js-menu-item">Стоимость</a>
+            </li>
+            <li class="menu-item">
+              <a href="#stock" class="menu-item-text text-small js-menu-item">Акции</a>
+            </li>
+            <li class="menu-item">
+              <a href="#reviews" class="menu-item-text text-small js-menu-item">Отзывы</a>
+            </li>
+            <li class="menu-item">
+              <a href="#answer" class="menu-item-text text-small js-menu-item">Задать вопрос</a>
+            </li>
+            <li class="menu-item">
+              <a href="#contacts" class="menu-item-text text-small">Контакты</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-last-column">
+          <div class="phone-wrapper">
+            <div class="phone-img-wrapper">
+              <img src="img/phone-call.png" alt="phone" class="phone-img">
             </div>
-
+            <p class="phone-text">8 800 222 19 79</p>
           </div>
+          <div class="footer-icons-wrapper">
+            <a href="#"><img src="img/inst.svg" alt="" class="footer-icon"></a>
+            <a href="#"><img src="img/vk.svg" alt="" class="footer-icon"></a>
+            <a href="#"><img src="img/youtube.svg" alt="" class="footer-icon"></a>
+            <a href="#"><img src="img/facebook.svg" alt="" class="footer-icon"></a>
+            <a href="#"><img src="img/telegr.svg" alt="" class="footer-icon"></a>
+          </div>
+
         </div>
       </div>
     </div>
   </footer>
+
 </div>
 
 
