adaptive modal window on phone. footer adaptive on phone

--- a/app/index.html
+++ b/app/index.html
@@ -621,7 +621,8 @@
             </a>
           </div>
           <p class="footer-text">info@anatomia-clinic.ru </p>
-            <p class="footer-text">ООО "ЦМР района Басманный" Юридический адрес: 105066, г.Москва, ул.Спартаковская, д.24</p>
+          <p class="footer-text">ООО "ЦМР района Басманный"</p>
+          <p class="footer-text">Юридический адрес: 105066, г.Москва,<br> ул.Спартаковская, д.24</p>
           <p class="footer-text">Анатомия® - зарегистрированный товарный знак</p>
         </div>
         <div class="footer-middle-column">
