add burger menu for phone

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,42 @@
 
 </head>
 <body>
+<div class="burger-wrapper burger-wrapper-js">
+  <div class="burger-overlay burger-overlay-js"></div>
+  <div class="burger-box">
+    <div class="burger-title">
+      <div>
+        <img src="img/main_logo.svg" alt="logo" class="burger-logo">
+      </div>
+      <div>
+        <button class="burger-close-button burger-close-button-js"><img src="img/close.png" alt="close"></button>
+      </div>
+    </div>
+    <div class="burger-menu-main-wrapper">
+      <ul class="burger-menu-content">
+        <li><a href="#about" class="menu-item-text text-small js-menu-item">О клинике</a></li>
+        <li><a href="#price" class="menu-item-text text-small js-menu-item">Стоимость</a></li>
+        <li><a href="#stock" class="menu-item-text text-small js-menu-item">Акции</a></li>
+        <li><a href="#reviews" class="menu-item-text text-small js-menu-item">Отзывы</a></li>
+        <li><a href="#answer" class="menu-item-text text-small js-menu-item">Задать вопрос</a></li>
+        <li><a href="#contacts" class="menu-item-text text-small js-menu-item">Контакты</a></li>
+      </ul>
+      <div class="burger-menu-bottom-content">
+        <div class="phone-wrapper">
+          <p class="phone-text">8 800 222 19 79</p>
+        </div>
+        <div class="footer-icons-wrapper">
+          <a href="#"><img src="img/inst.svg" alt="" class="footer-icon"></a>
+          <a href="#"><img src="img/vk.svg" alt="" class="footer-icon"></a>
+          <a href="#"><img src="img/youtube.svg" alt="" class="footer-icon"></a>
+          <a href="#"><img src="img/facebook.svg" alt="" class="footer-icon"></a>
+          <a href="#"><img src="img/telegr.svg" alt="" class="footer-icon"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
 
 <div>
 
@@ -53,6 +89,11 @@
                   <img src="img/phone-call.png" alt="phone" class="phone-img">
                 </div>
                 <p class="phone-text">8 800 222 19 79</p>
+              </div>
+              <div class="burger-button-wrapper">
+                <button class="burger-button burger-button-js">
+                  <img src="img/burger.svg" alt="burger-img" class="burger-img">
+                </button>
               </div>
             </div>
           </header>
@@ -569,21 +610,21 @@
               <div><img src="img/map1.jpg" alt="">
               </div>
               <p class="text-small block-map-text">Москва, ул. Спартаковская, д. 24, ст. 2, м. «Бауманская» (1 мин.)ТЦ Елоховский пассаж, 2 этаж</p>
-              <img src="img/map-metka.png" alt="" class="block-map-img-metka1">
+              <div class="block-map-img-metka1"><a href="#"><img src="img/map-metka.png" alt=""></a></div>
             </div>
           </div>
           <div class="block-map-card-wrapper">
             <div class="block-map-card">
               <img src="img/map2.jpg" alt="">
               <p class="text-small block-map-text">Москва,  ул. Покрышкина, 1, стр. 1, м. «Юго-Западная» (2 мин.)</p>
-              <img src="img/map-metka.png" alt="" class="block-map-img-metka2">
+              <div class="block-map-img-metka2"><a href="#"><img src="img/map-metka.png" alt=""></a></div>
             </div>
           </div>
           <div class="block-map-card-wrapper">
             <div class="block-map-card">
               <img src="img/map3.jpg" alt="">
               <p class="text-small block-map-text">Краснодар, ул. Московская, д. 61</p>
-              <img src="img/map-metka.png" alt="" class="block-map-img-metka3">
+              <div class="block-map-img-metka3"><a href="#"><img src="img/map-metka.png" alt=""></a></div>
             </div>
 
           </div>
@@ -605,8 +646,8 @@
       </div>
       <div class="button-wrapper">
         <button class="button-general-styles block-inst-button">
-          <span class="button-inst-description">Посмотреть<img src="img/button-inst.png" alt="" class="block-inst-img-button">
-          </span>
+          <a href="#" class="button-inst-description">Посмотреть<img src="img/button-inst.png" alt="" class="block-inst-img-button">
+          </a>
         </button>
       </div>
     </div>
