full adaptive for phone. fix bug with burger.clean code

--- a/app/index.html
+++ b/app/index.html
@@ -496,14 +496,16 @@
           <div>
             <div class="block-reviews-independent-row">
               <div class="block-reviews-independent-column-left">
-                <p class="text-small ">Так нас оценивают пациенты в интернете</p>
-                <p class="text-rate">4,7/5</p>
-                <div class="stars-wrapper">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
+                <p class="text-small">Так нас оценивают пациенты в интернете</p>
+                <div class="block-reviews-block-rate">
+                  <p class="text-rate">4,7/5</p>
+                  <div class="stars-wrapper">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                  </div>
                 </div>
               </div>
               <div class="block-reviews-independent-column-right">
@@ -518,14 +520,16 @@
           <div>
             <div class="block-reviews-independent-row">
               <div class="block-reviews-independent-column-left">
-                <p class="text-small ">Так нас оценивают пациенты в интернете</p>
-                <p class="text-rate">4,7/5</p>
-                <div class="stars-wrapper">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
+                <p class="text-small">Так нас оценивают пациенты в интернете</p>
+                <div class="block-reviews-block-rate">
+                  <p class="text-rate">4,7/5</p>
+                  <div class="stars-wrapper">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                  </div>
                 </div>
               </div>
               <div class="block-reviews-independent-column-right">
@@ -540,14 +544,16 @@
           <div>
             <div class="block-reviews-independent-row">
               <div class="block-reviews-independent-column-left">
-                <p class="text-small ">Так нас оценивают пациенты в интернете</p>
-                <p class="text-rate">4,7/5</p>
-                <div class="stars-wrapper">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
-                  <img src="img/Star.png" alt="" class="star-img">
+                <p class="text-small">Так нас оценивают пациенты в интернете</p>
+                <div class="block-reviews-block-rate">
+                  <p class="text-rate">4,7/5</p>
+                  <div class="stars-wrapper">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                    <img src="img/Star.png" alt="" class="star-img">
+                  </div>
                 </div>
               </div>
               <div class="block-reviews-independent-column-right">
