fix bug with video in review slider

--- a/app/index.html
+++ b/app/index.html
@@ -422,7 +422,7 @@
         <div class="block-reviews-row js-slider-wrapper-video-review">
           <div>
             <div class="block-reviews-video-slide-wrapper">
-              <div class="block-reviews-video-slide-column-left js-play">
+              <div class="block-reviews-video-slide-column-left js-play" data-review="review1">
                 <img src="img/photo-video.jpg" alt="" class="photo-video-img">
                 <img src="img/play.png" alt="" class="play-img">
               </div>
@@ -444,7 +444,7 @@
           </div>
           <div>
             <div class="block-reviews-video-slide-wrapper">
-              <div class="block-reviews-video-slide-column-left js-play">
+              <div class="block-reviews-video-slide-column-left js-play" data-review="review2">
                 <img src="img/photo-video.jpg" alt="" class="photo-video-img">
                 <img src="img/play.png" alt="" class="play-img">
               </div>
@@ -466,7 +466,7 @@
           </div>
           <div>
             <div class="block-reviews-video-slide-wrapper">
-              <div class="block-reviews-video-slide-column-left js-play">
+              <div class="block-reviews-video-slide-column-left js-play" data-review="review3">
                 <img src="img/photo-video.jpg" alt="" class="photo-video-img">
                 <img src="img/play.png" alt="" class="play-img">
               </div>
@@ -574,12 +574,40 @@
     </div>
   </div>
 
-  <div id="myModal1" class="modal modal-map">
+  <div class="modal modal-map js-modal-review" data-review="review1">
 
     <!-- Модальное содержание -->
     <div class="modal-content-map container">
       <div class="modal-content-map-iframe-wrapper">
         <iframe class="modal-content-map-iframe" src="https://www.youtube.com/embed/khPh1z7e6ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <span class="close-map">
+<!--        <img src="img/close.png" alt="">-->
+      </span>
+      <div></div>
+    </div>
+
+  </div>
+  <div class="modal modal-map js-modal-review" data-review="review2">
+
+    <!-- Модальное содержание -->
+    <div class="modal-content-map container">
+      <div class="modal-content-map-iframe-wrapper">
+        <iframe class="modal-content-map-iframe" src="https://www.youtube.com/embed/zhxRBp_QvJ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <span class="close-map">
+<!--        <img src="img/close.png" alt="">-->
+      </span>
+      <div></div>
+    </div>
+
+  </div>
+  <div class="modal modal-map js-modal-review" data-review="review3">
+
+    <!-- Модальное содержание -->
+    <div class="modal-content-map container">
+      <div class="modal-content-map-iframe-wrapper">
+        <iframe class="modal-content-map-iframe" src="https://www.youtube.com/embed/lTjCvKYtYtk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <span class="close-map">
 <!--        <img src="img/close.png" alt="">-->
